[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "microcert-rec"
version = "0.1.0"
description = "Two-tower-style recommender for micro-certifications — TruncatedSVD + TF-IDF"
requires-python = ">=3.11"
dependencies = [
  "numpy",
  "pandas",
  "scipy",
  "scikit-learn>=1.4",
  "matplotlib",
  "seaborn",
  "fastapi",
  "uvicorn[standard]",
  "pydantic>=2",
  "joblib",
  "pyarrow",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "httpx",
  "ruff",
  "jupyterlab",
  "mlflow",
  "implicit",
]

[tool.setuptools.packages.find]
where = ["src"]
